# Lectio

./: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Current-Bug_EXAMPLE.md  Current-Bug_TEMPLATE.md  Dockerfile  Makefile  Plan.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/codeql/: codeql-config.yml
.github/instructions/: reader-first.instructions.md
.github/workflows/: ci.yml  codeql.yml
devdata/: generate_sample_opml.py  generate_test_opml.py  sample_test_set.opml
docs/: deployment.md  multiuser-migration.md
scripts/: apply_real_folders.py  backfill_canonical_links.py  backfill_feed_all_entries.py  backfill_pcgamer_lead_images.py  backup_databases.py  categorize_uncategorized.py  check_entries_db.py  check_lead_images_db.py  cleanup_duplicate_saved_entries.py  clear_pcgamer_cache.py  debug_tf.py  debug_tf2.py  debug_tf3.py  debug_tf_verify.py  migrate_tag_as_keep.py  migrate_thumb_cache_to_db.py  migrate_to_multiuser.py  purge_starred_archive.py  query_specific_entry.py  reconcile_duplicate_feeds.py  refresh_screenshots.py  show_backfill_progress.py  show_pcgamer_lead_images.py  tag_categorize.py  tag_to_folders.py  upgrade_reader.sh
scripts/screenshots/: __init__.py  capture.py  demo.py  seed.py
services/: __init__.py  bluesky.py  deviantart.py  devto.py  email.py  feed_discovery.py  feed_refresh.py  feed_tags.py  fever.py  freshrss.py  greader.py  html_sanitize.py  inoreader.py  instapaper_import.py  lead_image_plugins.py  lead_images.py  link_canonical.py  miniflux.py  miniflux_import.py  passwords.py  pinterest_oauth.py  podcast_audio.py  podcast_feed_discovery.py  quire.py  reader_api.py  reader_sanitize.py  reddit.py  saved_articles.py  saved_autofile.py  scraper_service.py  starred_archive.py  svg_sanitize.py  takeout_service.py  tenancy.py  ttrss.py  url_guard.py  users.py  webhooks.py  websub.py  youtube.py  (+3 more)
static/: media-player.js  reader.css  reader.js  style.css
static/js/: app.js
static/themes/: dark.css  light.css
templates/: _entry_pane.html  _settings_feeds_folders.html  _settings_feeds_stale.html  _tree_folder_feeds.html  account.html  administration.html  index.html  login.html  read_mode.html
templates/js/: _layout_shell.js  _pull_to_refresh.js
tests/: conftest.py  test_normalize_feed_url.py
tests/integration/: _multiuser_harness.py  test_auth_hardening.py  test_autofile_non_feed_hosts.py  test_bbcode_detection.py  test_bookmarklet_save_protocol.py  test_browser_ua_feeds.py  test_bulk_feed_actions.py  test_cache_isolation.py  test_canonical_links.py  test_change_feed_url_validate.py  test_csrf.py  test_delete_entry_tombstone.py  test_deviantart_maintenance_sync.py  test_deviantart_watchlist_autoresume.py  test_email_route.py  test_entry_date_override.py  test_entry_detail_characterization.py  test_entry_title_override.py  test_favicon_route.py  test_feed_automations.py  test_feed_link_xss.py  test_feed_removal_consolidation.py  test_feed_strategy_routes.py  test_fetch_history.py  test_greader_subscription_edit.py  test_hide_shorts_global.py  test_img_proxy_cache.py  test_img_proxy_ssrf.py  test_instance_settings.py  (+54 more)
(+85 files in other folders)
