[project]
name = "lectio"
version = "0.1.0"
description = "Browser-based RSS and Atom reader"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite",
    "fastapi",
    "feedparser",
    "httpx",
    "pillow>=12.3.0",
    "smartcrop>=0.5",
    "itsdangerous",
    "jinja2",
    "python-multipart",
    "reader>=3.25",
    "beautifulsoup4",
    "readability-lxml",
    "sqlalchemy",
    "resend",
    "uvicorn[standard]",
    "markdown>=3.10.2",
]

[project.optional-dependencies]
# Tooling-only: drives scripts/refresh_screenshots.py. Not needed at runtime.
# Install with `uv sync --extra screenshots && uv run playwright install chromium`.
screenshots = [
    "playwright>=1.44",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff",
    "ty",
    "uv",
    "uvicorn[standard]>=0.44.0",
    # starlette's TestClient prefers httpx2; without it the suite emits a
    # StarletteDeprecationWarning. Test-only — production code still uses httpx.
    "httpx2",
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
extend-ignore = ["E203"]
select = ["E", "F", "W", "I", "B"]

# Ruff is the canonical linter/formatter for this project. The `select` list
# enables pycodestyle (`E`), pyflakes (`F`), warnings (`W`), isort-style
# import ordering (`I`) and bugbear (`B`). Add or remove checks here if
# you want stricter or looser linting.
